@@ -616,7 +616,6 @@ Ext.extend(GO.email.EmailComposer, GO.Window, {
 
 	show : function(config) {
 
-		//TODO enable after testing
 		Ext.getBody().mask(GO.lang.waitMsgLoad);
 
 		delete this.link_config;
